# SkyrimVR-DamageHUD

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build_and_pack.bat  vcpkg.json
MCM/Config/FloatingDamage/: config.json  settings.ini
dll/: ActorData.cpp  ActorData.h  FloatingDamage.cpp  FloatingDamage.h  exports.def  iniSettings.cpp  iniSettings.h  main.cpp  tes.h
src/: ActorData.cpp  ActorData.h  FloatingDamage.cpp  FloatingDamage.h  PCH.h  Plugin.cpp  Settings.cpp  Settings.h
swf/: DamageWidget.as  Main.as  TextWidget.swf
